fixed video size on small phone screens

--- a/css/electronics.css
+++ b/css/electronics.css
@@ -11,6 +11,6 @@
 
   @media screen and (max-width: 420px) {
     #videoPlayer {
-      width: 78%;
+      width: 70%;
     }
   }
